# web-banking-system

./: .gitignore  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Main.cpp  README.md  Web-banking-app.tex  logs.txt  strings.xml
.circleci/: config.yml
.github/workflows/: cmake.yml
Test/: CMakeLists.txt  Test.vcxproj  ctest.cpp  pch.h  test.cpp  vs_google_test_explorer_namespace.h
Thesis/: Web-banking-app.tex
Wt 4.3.1 msvs2019 x64/doc/examples/html/: AddresseeEdit_8C.html  AddresseeEdit_8C_source.html  AddresseeEdit_8h.html  AddresseeEdit_8h_source.html  AttachmentEdit_8C.html  AttachmentEdit_8C_source.html  AttachmentEdit_8h.html  AttachmentEdit_8h_source.html  Attachment_8h.html  Attachment_8h_source.html  Character_8C.html  Character_8C_source.html  Character_8h.html  Character_8h_source.html  ChartConfig_8C.html  ChartConfig_8C_source.html  ChartConfig_8h.html  ChartConfig_8h_source.html  ChartsApplication_8C.html  ChartsApplication_8C_source.html  ChartsExample_8C.html  ChartsExample_8C_source.html  ChartsExample_8h.html  ChartsExample_8h_source.html  ComposeExample_8C.html  ComposeExample_8C_source.html  ComposeExample_8h.html  ComposeExample_8h_source.html  Composer_8C.html  Composer_8C_source.html  Composer_8h.html  Composer_8h_source.html  ContactSuggestions_8C.html  ContactSuggestions_8C_source.html  ContactSuggestions_8h.html  ContactSuggestions_8h_source.html  Contact_8h.html  Contact_8h_source.html  CountDownWidget_8C.html  CountDownWidget_8C_source.html  (+659 more)
Wt 4.3.1 msvs2019 x64/doc/reference/html/: InstallationUnix.html  InstallationWindows.html  Releasenotes.html  annotated.html  classWt_1_1Auth_1_1AbstractPasswordService-members.html  classWt_1_1Auth_1_1AbstractPasswordService.html  classWt_1_1Auth_1_1AbstractPasswordService_1_1AbstractStrengthValidator-members.html  classWt_1_1Auth_1_1AbstractPasswordService_1_1AbstractStrengthValidator.html  classWt_1_1Auth_1_1AbstractPasswordService_1_1AbstractStrengthValidator__inherit__graph.map  classWt_1_1Auth_1_1AbstractPasswordService_1_1AbstractStrengthValidator__inherit__graph.md5  classWt_1_1Auth_1_1AbstractPasswordService_1_1StrengthValidatorResult-members.html  classWt_1_1Auth_1_1AbstractPasswordService_1_1StrengthValidatorResult.html  classWt_1_1Auth_1_1AbstractPasswordService__inherit__graph.map  classWt_1_1Auth_1_1AbstractPasswordService__inherit__graph.md5  classWt_1_1Auth_1_1AbstractUserDatabase-members.html  classWt_1_1Auth_1_1AbstractUserDatabase.html  classWt_1_1Auth_1_1AbstractUserDatabase_1_1Transaction-members.html  classWt_1_1Auth_1_1AbstractUserDatabase_1_1Transaction.html  classWt_1_1Auth_1_1AbstractUserDatabase__inherit__graph.map  (+1841 more)
Wt 4.3.1 msvs2019 x64/lib/: libcrypto.lib  libcryptod.lib  libhpdf.lib  libhpdfd.lib  libssl.lib  libssld.lib  wt.lib  wtd.lib  wtdbo.lib  wtdbod.lib  wtdbofirebird.lib  wtdbofirebirdd.lib  wtdbomssqlserver.lib  wtdbomssqlserverd.lib  wtdbomysql.lib  wtdbomysqld.lib  wtdbopostgres.lib  wtdbopostgresd.lib  wtdbosqlite3.lib  wtdbosqlite3d.lib  wthttp.lib  wthttpd.lib  wtisapi.lib  wtisapid.lib  wttest.lib  wttestd.lib
css/: FrontPage.css
include/: Hello.h  HelloApplication.h  ListAccountsWidget.h  LoggingPage.h  LogsWidget.h  Session.h  TestClass.h  TransactionsWidget.h  User.h  UserBalanceWidget.h  WebBankingApplication.h  WebBankingWidget.h
src/: HelloApplication.cpp  ListAccountsWidget.cpp  LoggingPage.cpp  LogsWidget.cpp  Main.cpp  Session.cpp  TestClass.cpp  TransactionsWidget.cpp  User.cpp  UserBalanceWidget.cpp  WebBankingApplication.cpp  WebBankingWidget.cpp
web-banking-system/: CMakeLists.txt
wt-4.3.1/src/Wt/: WRasterImage-d2d1.C
(+210 files in other folders)
